# zenithmcp

./: .gitignore  .pre-commit-config.yaml  BUSL  CONTRIBUTING.md  LICENSE  README.md  config.yaml  demo_pipeline.py  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  INGESTION_PIPELINE.md
docs/source/: conf.py  index.rst
docs/source/api/: modules.rst  zenithmcp.rst
docs/tests/: test_basic.py
src/zenithmcp/: __init__.py
src/zenithmcp/caching/: __init__.py
src/zenithmcp/ingestion/: __init__.py  chunking.py  config.py  discovery.py  embedding.py  indexing.py  models.py  pipeline.py
src/zenithmcp/interface/: __init__.py  server.py
src/zenithmcp/rag_core/: __init__.py  retrieval.py
tests/: __init__.py  conftest.py  test_version.py
tests/ingestion/: conftest.py  test_chunking.py  test_config.py  test_discovery.py  test_embedding.py  test_indexing.py  test_models.py  test_pipeline.py
