[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zenithmcp"
version = "0.1.0"
description = "High-performance MCP server for code context retrieval"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Business Source License (BSL) 1.1"}
authors = [
    {name = "FoveaWeb LLC", email = "86407432+aurichalcite@users.noreply.github.com"},
]
keywords = [
    "mcp",
    "model-context-protocol",
    "rag",
    "retrieval-augmented-generation",
    "code-search",
    "ai",
    "llm",
    "developer-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=2.12.1",
    "qdrant-client>=1.12.0",
    "tree-sitter>=0.21.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.32.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "astchunk>=0.1.0",
    "gitpython>=3.1.45",
    "typer>=0.17.3",
    "pyfakefs>=5.9.3",
    "pytest-xdist>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "pre-commit>=4.0.0",
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
]
docs = [
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "sphinx-autodoc-typehints>=2.5.0",
    "myst-parser>=3.0.0",
    "sphinxcontrib-mermaid>=1.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=5.0.0",
    "hypothesis>=6.100.0",
]

[project.urls]
Homepage = "https://github.com/zenithmcp/zenithmcp"
Documentation = "https://zenithmcp.readthedocs.io"
Repository = "https://github.com/zenithmcp/zenithmcp.git"
Issues = "https://github.com/zenithmcp/zenithmcp/issues"
Changelog = "https://github.com/zenithmcp/zenithmcp/blob/main/CHANGELOG.md"

[project.scripts]
zenithmcp = "zenithmcp.cli:main"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
    "/.gitignore",
    "/.pre-commit-config.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zenithmcp"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.17.1",
    "myst-parser>=4.0.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-mermaid>=1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "ANN",    # flake8-annotations
    "UP",     # pyupgrade
    "D",      # pydocstyle
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
    "PT",     # flake8-pytest-style
    "PLR",    # pylint refactor
    "PLW",    # pylint warnings
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RET",    # flake8-return
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring
    "D212",   # Multi-line docstring summary should start at the first line
    "D213",   # Multi-line docstring summary should start at the second line
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D", "PLR2004", "S101"]
"docs/conf.py" = ["D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["zenithmcp"]
force-wrap-aliases = true
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
namespace_packages = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "qdrant_client.*",
    "tree_sitter.*",
    "astchunk.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=zenithmcp",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=70",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests for benchmarking",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src/zenithmcp"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "except ImportError:",
    "pass",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["zenithmcp"]
skip_gitignore = true
force_wrap_aliases = true
combine_as_imports = true
